--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" href="/favicon.ico" />
+        <link rel="icon" href="Images/header.jpg" class="h-10 w-10 rounded-full" />
         <link rel="stylesheet" href="./src/assets/main.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,7 +15,7 @@
             rel="stylesheet"
         />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Celine's Treats</title>
+        <title>Celine's Treats || Pasteries and more</title>
     </head>
     <body>
         <div id="app"></div>
